RESOLVED FIXED 210134
REGRESSION: (r258434) [ Mac WK1 ] media/track/track-css-user-override.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=210134
Summary REGRESSION: (r258434) [ Mac WK1 ] media/track/track-css-user-override.html is...
Truitt Savell
Reported 2020-04-07 11:03:04 PDT
media/track/track-css-user-override.html This test is a highly intermittent failure. fails maybe once a day. I am able to reproduce the tests by running command: run-webkit-tests --iterations 2000 --exit-after-n-failures 1 --exit-after-n-crashes-or-timeouts 1 --debug-rwt-logging --no-retry --force --no-build -f -1 media/track/track-css-user-override.html History: https://results.webkit.org/?suite=layout-tests&test=media%2Ftrack%2Ftrack-css-user-override.html --- /Volumes/Data/slave/catalina-debug-tests-wk1/build/layout-test-results/media/track/track-css-user-override-expected.txt +++ /Volumes/Data/slave/catalina-debug-tests-wk1/build/layout-test-results/media/track/track-css-user-override-actual.txt @@ -23,7 +23,7 @@ ** Mark background-color '!important' ** RUN(internals.setCaptionsStyleSheetOverride('video::cue { color: blue ; background-color: yellow !important; }')) EXPECTED (getComputedStyle(textTrackDisplayElement(video, 'cue')).color == 'rgb(128, 0, 128)') OK -EXPECTED (getComputedStyle(textTrackDisplayElement(video, 'cue')).backgroundColor == 'rgb(255, 255, 0)') OK +EXPECTED (getComputedStyle(textTrackDisplayElement(video, 'cue')).backgroundColor == 'rgb(255, 255, 0)'), OBSERVED 'rgb(0, 255, 0)' FAIL ** Mark color '!important' ** RUN(stylesheet.insertRule('video::cue { color: blue !important; background-color: yellow !important; }', 0))
Attachments
Patch (3.43 KB, patch)
2020-04-08 17:27 PDT, Peng Liu
eric.carlson: review+
An improved patch for landing (6.19 KB, patch)
2020-04-09 14:51 PDT, Peng Liu
no flags
Radar WebKit Bug Importer
Comment 1 2020-04-07 11:03:39 PDT
Truitt Savell
Comment 2 2020-04-07 11:24:16 PDT
The smallest regression range I was able to find was 258432 - 258434
Truitt Savell
Comment 3 2020-04-07 11:34:06 PDT
It looks like this was caused by https://trac.webkit.org/changeset/258434/webkit
Truitt Savell
Comment 4 2020-04-07 11:54:34 PDT
Marked test as failing while this is investigated https://trac.webkit.org/changeset/259656/webkit
Peng Liu
Comment 5 2020-04-08 17:27:30 PDT
Peng Liu
Comment 6 2020-04-09 14:51:29 PDT
Created attachment 396014 [details] An improved patch for landing
EWS
Comment 7 2020-04-09 23:55:19 PDT
Committed r259850: <https://trac.webkit.org/changeset/259850> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396014 [details].
Note You need to log in before you can comment on or make changes to this bug.