REGRESSION: (r258434) [ Mac WK1 ] media/track/track-css-user-override.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=210134

Reviewed by Eric Carlson.

Source/WebCore:

Call captionPreferencesChanged() directly in CaptionUserPreferences::setCaptionsStyleSheetOverride().

* page/CaptionUserPreferences.cpp:
(WebCore::CaptionUserPreferences::setCaptionsStyleSheetOverride):

LayoutTests:

Make the test reliable by replacing the timer and testExpected based approach
with the approach based on testExpectedEventually. Also remove unnecessary code.

* media/track/track-css-user-override.html:


Canonical link: https://commits.webkit.org/223206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259850 268f45cc-cd09-0410-ab3c-d52691b4dbfc